fix: BirthdateSelect Button unreadable color #16 (#17)

--- a/darkmode.scss
+++ b/darkmode.scss
@@ -880,6 +880,7 @@
 
   .BirthdateSelect-button {
     background-color: #121921;
+    color: #66757f;
   }
 
   .dropdown-menu li > a:hover {
